[package]
name = "push_notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
openssl = "0.10.42"
reqwest = { version = "0.11.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
